@@ -1,0 +1,3 @@
+= Docs Page
+
+Content of docs page.
